Fix the toolbox buttons alignment

--- a/static/css/_toolbox.scss
+++ b/static/css/_toolbox.scss
@@ -7,6 +7,7 @@
   padding: 10px;
 
   .toolbox-button {
+    float: right;
     margin-bottom: 5px;
     background-color: $brand-gray;
     border: 1px solid $toolbox-btn-active;
